                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-09-2006 fixed: playback of rarred media was broken.
 - 04-09-2006 fixed: GoAhead web server headers should now be more standards compliant (changed LF to CRLF)
 - 04-09-2006 fixed: Better reliability of pls parsing (should workaround the shoutcast problems)
 - 04-09-2006 fixed: Playback of 96kHz tracks with paplayer.
 - 03-09-2006 fixed: Query Info for All Files did not treat DVDs as a single entity.
 - 03-09-2006 fixed: [ 1551186 ] CD'S with datatrack do not rip correctly.
 - 03-09-2006 fixed: SMB workgroup/winsserver prompted for a restart even if the setting was cancelled.
 - 02-09-2006 fixed: Resume item from movie information page sometimes didn't function.
 - 02-09-2006 fixed: Missing string (id 14059).
 - 02-09-2006 fixed: Video database cleanup would hang if no database was present.
 - 02-09-2006 fixed: Fast forward, then Pause, then Play via the remote would restore fastforwarding, instead of playing.
 - 02-09-2006 changed: Made auto-rotation via the EXIF orientation data optional for pictures (new string added)
 - 02-09-2006 fixed: Delete and Rename from Mediawindows didn't work from Keymap.xml
 - 02-09-2006 fixed: UPnP memory leak + possible race condition during house cleaning
 - 02-09-2006 fixed: dvdplayer wouldn't output prologic for ac3 streams when analog was selected. 
 - 02-09-2006 changed: Music Info Loader now prioritises previously cached information over the music database.
 - 02-09-2006 fixed: [ 1550694 ] "Clean Video Database" deletes too much.
 - 01-09-2006 changed: smb/xbmc and inside rar/zip should now stack dvd directories