@@ -829,7 +829,7 @@
   <string id="13158">HDD Lock State:</string>
   <string id="13159">Subnet mask:</string>
   <string id="13160">Gateway:</string>
-  <string id="13161">DNS</string>
+  <string id="13161">Primary DNS</string>
   <string id="13162">Initialize failed</string>
   <string id="13163">GamePads On Port:</string>
   <string id="13164">Keyboard On Port:</string>
@@ -1390,7 +1390,7 @@
   <string id="20160">Hardware Information</string>
   <string id="20161">Total: %s MB, Used: %s MB, Free: %s MB</string>
   <string id="20162">Total HDD Used: %u%%  Free: %u%%</string>
-  <string id="20163">%s: %s MB of %s MB %s</string>
+  <string id="20163">%s: %s MB of %s MB Free</string>
   <string id="20164">Locking Not Supported</string>
   <string id="20165">Not Locked</string>
   <string id="20166">Locked</string>
@@ -1412,5 +1412,29 @@
   <string id="20182">Space</string>
   <string id="20183">Reload Skin</string>
   <string id="20184">Rotate using EXIF information</string>
+  <string id="20185">Detecting Hardware Values</string>
+  <string id="20186">Please Wait</string>
+  <string id="20187">Reading Values from EEPROM</string>
+  <string id="20188">Reading from EEPROM Done</string>
+  <string id="20189">Detecting Done</string>
+  <string id="20190">Detecting Harddisk Information</string>
+  <string id="20191">Detecting HDD Values</string>
+  <string id="20192">Detecting HDD Key</string>
+  <string id="20193">Detecting HDD Temperature</string>
+  <string id="20194">Detecting DVD-ROM Information</string>
+  <string id="20195">Detecting Model/Firmware</string>
+  <string id="20196">Detecting Network Settings</string>
+  <string id="20197">Detecting MAC Address</string>
+  <string id="20198">Detecting Online State</string>
+  <string id="20199">Detecting Xbox Version, Serial and CPU</string>
+  <string id="20300">Detecting Xbox Hardware</string>
+  <string id="20301">Detecting ModChip</string>
+  <string id="20302">Detecting BIOS</string>
+  <string id="20303">Detecting CPU Speed</string>
+  <string id="20304">Detecting Production Date</string>
+  <string id="20305">Detecting Attached Units</string>
+  <string id="20306">Unknown. Please add MD5 from xbmc.log to BiosIDs.ini.</string>
+  <string id="20307">Secondary DNS</string>
+  <string id="20308">DHCP Server:</string>
   <string id="29999">Auto Flicker Filter Patch</string>
 </strings>
