@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 04-09-2006 added: yet again more localization strings... 20185-20308 plus updates to 20163 and 13161
  - 04-09-2006 fixed: playback of rarred media was broken.
  - 04-09-2006 fixed: GoAhead web server headers should now be more standards compliant (changed LF to CRLF)
  - 04-09-2006 fixed: Better reliability of pls parsing (should workaround the shoutcast problems)
